<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MACS v1.0</string>
    <string name="title_activity_calculation">CalculationActivity</string>
    <string name="calc_meta_label">Project Information</string>
    <string name="vehicle_params">Vehicle Parameters</string>
    <string name="calc_single_title_hint">Unique Calculation Identifier</string>
    <string name="calc_engineer_name_hint">Engineer Name</string>
    <string name="calc_job_site_hint">Jobsite ID</string>
    <string name="measurements">Site Parameters</string>
    <string name="calc_beta_hint">Angle of slope from horizontal plane</string>
    <string name="calc_theta_hint">Angle of cable from horizontal plane</string>
    <string name="calc_sigma_hint">σ : Anchor angle</string>
    <string name="calc_delta_hint">δ : Soil interaction angle</string>
    <string name="calc_Kp_hint">Kp : Soil Passive Pressure Coefficient</string>
    <string name="soil_params">Soil Parameters</string>
    <string name="calculations_title">Calculations</string>
    <string name="new_calc">New Calculation</string>
    <string name="delete_calc">Delete</string>
    <string name="date_picker_title">Date of Calculation</string>
    <string name="show_subtitle">subtitles</string>
    <string name="subtitle">a subtitle</string>
    <string name="hide_subtitle">hide me</string>
    <string name="perform_calc">Perform Calculation</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="metric_weight">KGs </string>
    <string name="metric_distance">Meters </string>
    <string name="imperial_weight">LBs</string>
    <string name="imperial_distance">Feet</string>
    <string name="metric_soilunitwt">KG/cubic M</string>
    <string name="imperial_soilunitwt">Lbs/cubic Ft</string>
    <string name="imperial_soilc">psf</string>
    <string name="metric_soilc">KPa</string>
    <string name="imperial_answer">LBsF</string>
    <string name="metric_answer">KGsF</string>
    <string name="slide"> </string>
    <string name="roll"> </string>
    <string name="hg_popup">Hg is the vertical distance between the ground supporting the equipment and the vehicular center of gravity.
        The lower Hg is, the more stable the equipment anchor will be against overturning. For more details, see figure 1.</string>
    <string name="cg_popup">Cg is the lateral distance between the point of rotation (i.e. the bottom of an embedded blade, 
        the toe of the vehicle, etc.) and the center of gravity for the equipment. Bear in mind that the center of gravity 
        for equipment is dependent on attachments, location of appendages (excavator boom, etc.) and track setup, all of which 
        may vary. Be sure to be conservative in choice of this location. For more details, For more details, see figure 1. 
        For a variety of scenarios, see figure 2.</string>
    <string name="tg_popup">Tg is the ultimate anchor capacity. This delimiting force marks the tension in the anchor cable that will cause the equipment 
        anchor to move and become unstable.</string>
    <string name="db_popup">Db is the embedment depth of the equipment. This value is representative of the depth below the 
        depending on the scenario. See figure 1. For alternative setups, see figure 2.</string>
    <string name="wb_popup">wb is the width of the blade, shovel or equipment that is in contact with the adjacent, 
        resisting soil of embedment.</string>
    <string name="wv_popup">Wv is the weight of the equipment, measured as a force. The vehicular weight is located at a distance
        from the point of rotation, labeled as Cg. For more details, see figure 1.</string>
    <string name="la_popup">La is the lateral distance between the point of rotation (i.e. the bottom of an embedded blade, the toe of the vehicle, etc.)
        and the point at which an anchor is attached. For more details, see figure 1.</string>
    <string name="ha_popup">Ha is the vertical distance between the ground supporting the equipment and the anchor attachment point.
        The lower Ha is, the more stable the equipment anchor will be against overturning. For more details, see figure 1. For a variety of scenarios, see figure 2.</string>
    <string name="fricta_popup">Phi is the angle of internal friction for soil, which governs soil strength and resistance. This value should be attained from competent
        field testing and the judgment of a licensed engineer.</string>
    <string name="cohesion_popup">C is soil cohesion. Cohesion defines the non-stress dependent shear strength of soil and should be used with caution. Typically,
        cohesion occurs in stiff, over-consolidated clays or cemented native soils. Cohesion should be neglected if the designer is unsure of its presence.</string>
    <string name="ws_popup">Ws is the unit weight of the soil. This value represents the approximate bulk weight in a certain volume of soil.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="classes">
        <item>Excavator</item>
        <item>Bulldozer</item>
        <item>Crane</item>
        <item>Other</item>
    </string-array>

</resources>
